# AlgoritmiaProblemasDificiles

./: .gitignore  fasdfdfsafdsadffdsa
Practicas/practica2/: C.txt  C1.txt  C2.txt  CL.txt  CL40.txt  CL9.txt  CL_completo30.txt  CL_completo40.txt  CL_original.txt  CL_parcial.txt  CL_parcial30.txt  CL_parcial40.txt  CL_parcial9.txt  CL_resuelto.txt  CL_resuelto.txt30  CL_resuelto40.txt  CL_resuelto9.txt  CMakeLists.txt  LEEME.txt  clauses.txt  clausulas.txt  ejecutar2.sh  ex.sh  gC  gCL  generarCL.cpp  generarCL.h  generarCuadradoLatino.cpp  generarCuadradoLatino.h  generar_cuadrado_aleatorio.cc  hola.txt  main  main.cpp  mostrarResultado  mostrarResultado.cpp  prueba.cpp  resolverCL.cpp  resolverCL.h  resolverCL_backtracking.cpp  resolverCL_backtracking.h  (+4 more)
Practicas/practica2/entrada_pruebas_intensivas/: CL_parcial_100_10.txt  CL_parcial_100_100.txt  CL_parcial_100_20.txt  CL_parcial_100_30.txt  CL_parcial_100_40.txt  CL_parcial_100_50.txt  CL_parcial_10_10.txt  CL_parcial_10_100.txt  CL_parcial_10_20.txt  CL_parcial_10_30.txt  CL_parcial_10_40.txt  CL_parcial_10_50.txt  CL_parcial_15_10.txt  CL_parcial_15_100.txt  CL_parcial_15_20.txt  CL_parcial_15_30.txt  CL_parcial_15_40.txt  CL_parcial_15_50.txt  CL_parcial_20_10.txt  CL_parcial_20_100.txt  CL_parcial_20_20.txt  CL_parcial_20_30.txt  CL_parcial_20_40.txt  CL_parcial_20_50.txt  CL_parcial_25_10.txt  CL_parcial_25_100.txt  CL_parcial_25_20.txt  CL_parcial_25_30.txt  CL_parcial_25_40.txt  CL_parcial_25_50.txt  CL_parcial_30_10.txt  CL_parcial_30_100.txt  CL_parcial_30_20.txt  CL_parcial_30_30.txt  (+86 more)
(+240 files in other folders)
